Changes to OpenMS XML formats:

Changes to the contrib package:

Detailed list of changes to specific OpenMS classes:
- Renamed and moved classes

- Removed classes

- New classes

- Changes to classes
  - LabeledPairFinder: Added automated RT parameter estimated.
  - GaussFitter: removed several unneeded methods.
  - GammaDistributionFitter: removed several unneeded methods.

------------------------------------------------------------------------------------------
----                                   OpenMS 1.2                                     ----
------------------------------------------------------------------------------------------

New features and improvements of OpenMS:
- GCC 4.3 is now supported (GCC 3.4 and 4.0 are no longer supported)
- Added support for GCC STL debug mode (configure option --enable-stl-debug)
- Complete reimplementation of map alignment and feature grouping classes.
  This affected some classes in KERNEL and nearly all classes in ANALYSIS/MAPMATCHING.
  The affected classes are not listed in detail here.
- Added meta data arrays to spectra as the new standard way of handing peak meta information
- Improved interface of SpectrumCanvas and derived classes for easier reuse outside of TOPPView
- Added support for arbitrary modifications to peptide/protein modifications (based on PSI-MOD)
- Exceptions thrown by member functions are no longer declared in the header files.
  They are however documented in the class documentation.
- Added *beta* support for the HUPO PSI format mzML
  Currently only reading is supported and some features are not implemented yet
  e.g. chromatograms, zlib compression of base64 data, base64 integer data, base64 16 bit data
- Added the UTILS package, a bundle of small helper tools.
- Changed handling of amino acid sequences and modifications. Modifications are taken from
  PSI-MOD and are fully supported via the class AASequence. 
- Added new framework for generic clustering
